[package]
name = "solanadeads_fee_router"
version = "0.1.0"
description = "Solana Deads Fee Router (Token-2022 compatible)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanadeads_fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "token", "associated_token"] }
spl-token-2022 = "6.0.0"

[dev-dependencies]
anchor-client = "0.31.1"
